--- a/app/src/main/res/layout/province_item.xml
+++ b/app/src/main/res/layout/province_item.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="50dp"
+        android:gravity="center">
         <TextView
             android:id="@+id/province_tv"
             android:layout_width="wrap_content"
